Once again we learn that blindly following what someone says on the internet doesn't always work. I have no idea what overflow really does, but it was messing with scrolling and it apparently wasn't necessary at all. Overflow is no longer hidden on home blog page

--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -3,7 +3,6 @@ body {
   width: 1000px;
   margin: 0 auto;
   padding: 10px;
-  overflow: hidden;
 }
 
 pre {
@@ -18,7 +17,6 @@ pre {
 .logo {
   font-size: 20px;
   color: black;
-  overflow: hidden;
   text-decoration: none;
   font-weight: bold;
 }
@@ -39,7 +37,6 @@ pre {
 .post-title {
   font-size: 20px;
   font-weight: bold;
-  overflow: hidden;
 }
 
 .post-created {
